@@ -30,6 +30,7 @@ Additions:
    * Add elm_label_slide_go()
    * Add a label signal callback "slide,end"
    * Add "highlighted" and "unhighlighted" callbacks to list, genlist, and gengrid.
+   * Add elm_index_delay_change_time_set/get for changing delay change time in index.
 
 Improvements:
 
